--- a/styles/ingresso.css
+++ b/styles/ingresso.css
@@ -1,7 +1,3 @@
-.fundo {
-    background: var(--cor-gradiente);
-}
-
 .formulario {
     display: flex;
     flex-direction: column;
@@ -124,8 +120,12 @@
 
     .formulario--divisao-interno {
         width: auto;
-        align-items: center;
+        justify-content: flex-end;
         width: 29.2%;
+    }
+
+    .formulario__descricao--divisao {
+        padding-bottom: 0;
     }
 
     .formulario__area-resposta--selecao, .formulario__area-resposta-data {
@@ -142,6 +142,6 @@
     }
 
     .formulario__botao {
-        margin-top: 3rem;
+        margin: 3rem 0;
     }
 }
