--- a/styles/perguntas-frequentes.css
+++ b/styles/perguntas-frequentes.css
@@ -69,6 +69,10 @@
         font-size: 1.5rem;
     }
 
+    .perguntas-frequentes__icone {
+    font-size: 1.5rem;
+    }
+
     .perguntas-frequentes__resposta, .perguntas-frequentes__lista {
         width: 616px;
     }
@@ -83,6 +87,10 @@
         width: 996px;
         font-size: 2rem;
     }
+
+    .perguntas-frequentes__icone {
+        font-size: 2rem;
+        }
 
     .perguntas-frequentes__resposta, .perguntas-frequentes__lista {
         width: 964px;
